--- a/requirements.cfg
+++ b/requirements.cfg
@@ -1,39 +1,23 @@
-asgiref==3.6.0
-backports.zoneinfo==0.2.1
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-cryptography==40.0.2
-defusedxml==0.7.1
-dj-rest-auth==3.0.0
-Django==4.1.7
-django-allauth==0.52.0
-django-cors-headers==3.14.0
-djangorestframework==3.14.0
-djangorestframework-jwt==1.11.0
-djangorestframework-simplejwt==5.2.2
-google-api-core==2.11.0
-google-api-python-client==2.86.0
-google-auth==2.17.3
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-googleapis-common-protos==1.59.0
-httplib2==0.22.0
-idna==3.4
-oauthlib==3.2.2
-protobuf==4.22.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-PyJWT==2.6.0
-pyparsing==3.0.9
-python3-openid==3.2.0
-pytz==2023.3
-requests==2.28.2
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
-sqlparse==0.4.3
-uritemplate==4.1.1
-urllib3==1.26.15
+asgiref
+cryptography
+dj-rest-auth
+Django
+django-allauth
+django-cors-headers
+djangorestframework
+djangorestframework-jwt
+djangorestframework-simplejwt
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+googleapis-common-protos
+httplib2
+oauthlib
+pycparser
+PyJWT
+requests
+requests-oauthlib
+sqlparse
+
